fix: make sure search results don't collapse width

--- a/packages/gatsby-theme-aio/src/components/SearchPage/index.css
+++ b/packages/gatsby-theme-aio/src/components/SearchPage/index.css
@@ -81,6 +81,7 @@ mark {
 }
 
 .search-results {
+  width: 100%;
   display: flex;
 }
 
